added WAV audio support

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -16,8 +16,17 @@
     "#   Importar cosas que importan\n",
     "import numpy as np\n",
     "from scipy.signal import butter, filtfilt\n",
+    "from scipy.io.wavfile import read, write\n",
     "from scipy import fftpack\n",
+    "from IPython.display import Audio\n",
     "import plotly.graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Señales"
    ]
   },
   {
@@ -26,16 +35,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   Señal\n",
+    "#   Señal de ejemplo\n",
     "##  Parámetros\n",
     "T = 5           # Sample Period\n",
-    "fs = 300.0       # sample rate, Hz\n",
+    "fs = 300.0      # sample freq, Hz\n",
     "n = int(T * fs) # total number of samples\n",
     "t = np.linspace(0,T,n, endpoint=True)\n",
     "\n",
     "sig = np.sin(1.2*2*np.pi*t)\n",
     "noise = 1.5*np.cos(9*2*np.pi*t) + 0.5*np.sin(12.0*2*np.pi*t)    # Ruido\n",
     "data = sig + noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   Audio 1\n",
+    "fs, data = read('test1.wav')\n",
+    "data = data[:,0]\n",
+    "print(\"Sampling Frequency is\", fs)\n",
+    "\n",
+    "##  Parámetros\n",
+    "T = data.shape[0] / fs\n",
+    "n = int(T * fs)\n",
+    "t = np.linspace(0,T,n, endpoint=True)\n",
+    "\n",
+    "Audio(data, rate=fs)"
    ]
   },
   {
@@ -76,7 +104,7 @@
     "            x = sig_noise_freq,\n",
     "            y = sig_noise_amp,\n",
     "            line =  dict(shape =  'spline' ),\n",
-    "            name = 'fft of signal',\n",
+    "            name = 'fft of original signal',\n",
     "            showlegend=True\n",
     "            ))\n",
     "fig.show()"
@@ -96,7 +124,7 @@
    "outputs": [],
    "source": [
     "#   Parámetros\n",
-    "cutoff = 2      # desired cutoff frequency of the filter, Hz , slightly higher than actual 1.2 Hz\n",
+    "cutoff = 3400      # desired cutoff frequency of the filter, Hz , slightly higher than actual 1.2 Hz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
     "order = 2       # sin wave can be approx represented as quadratic"
    ]
@@ -134,6 +162,29 @@
     "            y = filtered_data,\n",
     "            line =  dict(shape =  'spline' ),\n",
     "            name = 'filtered signal'\n",
+    "            ))\n",
+    "fig.show()\n",
+    "\n",
+    "Audio(filtered_data, rate=fs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig_noise_fft = fftpack.fft(filtered_data)\n",
+    "sig_noise_amp = 2 / t.size * np.abs(sig_noise_fft)\n",
+    "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
+    "\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(\n",
+    "            x = sig_noise_freq,\n",
+    "            y = sig_noise_amp,\n",
+    "            line =  dict(shape =  'spline' ),\n",
+    "            name = 'fft of original signal',\n",
+    "            showlegend=True\n",
     "            ))\n",
     "fig.show()"
    ]
