replaced plotly with matplotlib

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -15,11 +15,11 @@
    "source": [
     "#   Importar cosas que importan\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from scipy.signal import butter, filtfilt\n",
     "from scipy.io.wavfile import read, write\n",
     "from scipy import fftpack\n",
-    "from IPython.display import Audio\n",
-    "import plotly.graph_objects as go"
+    "from IPython.display import Audio"
    ]
   },
   {
@@ -59,8 +59,8 @@
     "print(\"Sampling Frequency is\", fs)\n",
     "\n",
     "##  Parámetros\n",
-    "T = data.shape[0] / fs\n",
-    "n = int(T * fs)\n",
+    "n = data.shape[0]\n",
+    "T = n/fs\n",
     "t = np.linspace(0,T,n, endpoint=True)\n",
     "\n",
     "Audio(data, rate=fs)"
@@ -72,14 +72,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "            y = data,\n",
-    "            line =  dict(shape =  'spline' ),\n",
-    "            name = 'original signal',\n",
-    "            showlegend=True\n",
-    "            ))\n",
-    "fig.show()"
+    "plt.figure(figsize=(12,7))\n",
+    "plt.plot(data, color='xkcd:lightish blue', label='Original signal')\n",
+    "plt.xlabel('Sample Index')\n",
+    "plt.ylabel('Amplitude')\n",
+    "plt.title('Waveform')\n",
+    "plt.gca().spines['top'].set_position(('data',0))\n",
+    "plt.gca().spines['right'].set_position(('data',0))\n",
+    "plt.grid(ls='--', zorder=0)\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.show()"
    ]
   },
   {
@@ -99,15 +101,17 @@
     "sig_noise_amp = 2 / t.size * np.abs(sig_noise_fft)\n",
     "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
     "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "            x = sig_noise_freq,\n",
-    "            y = sig_noise_amp,\n",
-    "            line =  dict(shape =  'spline' ),\n",
-    "            name = 'fft of original signal',\n",
-    "            showlegend=True\n",
-    "            ))\n",
-    "fig.show()"
+    "plt.figure(figsize=(12,7))\n",
+    "plt.plot(sig_noise_freq, sig_noise_amp, color='xkcd:lightish blue', label='Original signal')\n",
+    "plt.xlabel('Frequency')\n",
+    "plt.ylabel('Amplitude')\n",
+    "plt.title('Fourier Spectrum')\n",
+    "plt.gca().spines['top'].set_position(('data',0))\n",
+    "plt.gca().spines['right'].set_position(('data',0))\n",
+    "plt.grid(ls='--', zorder=0)\n",
+    "plt.legend(loc='upper right')\n",
+    "# plt.gca().set_xlim([-100,6000])\n",
+    "plt.show()"
    ]
   },
   {
@@ -124,7 +128,7 @@
    "outputs": [],
    "source": [
     "#   Parámetros\n",
-    "cutoff = 3400      # desired cutoff frequency of the filter, Hz , slightly higher than actual 1.2 Hz\n",
+    "cutoff = 3000   # desired cutoff frequency of the filter, Hz , slightly higher than actual 1.2 Hz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
     "order = 2       # sin wave can be approx represented as quadratic"
    ]
@@ -152,18 +156,17 @@
     "# Filter the data, and plot both the original and filtered signals.\n",
     "filtered_data = butter_lowpass_filter(data, cutoff, fs, order)\n",
     "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "            y = data,\n",
-    "            line =  dict(shape =  'spline' ),\n",
-    "            name = 'signal with noise'\n",
-    "            ))\n",
-    "fig.add_trace(go.Scatter(\n",
-    "            y = filtered_data,\n",
-    "            line =  dict(shape =  'spline' ),\n",
-    "            name = 'filtered signal'\n",
-    "            ))\n",
-    "fig.show()\n",
+    "plt.figure(figsize=(12,7))\n",
+    "plt.plot(data, color='xkcd:lightish blue', label='Original signal')\n",
+    "plt.plot(filtered_data, color='xkcd:watermelon', label='Filtered signal')\n",
+    "plt.xlabel('Sample Index')\n",
+    "plt.ylabel('Amplitude')\n",
+    "plt.title('Waveform')\n",
+    "plt.gca().spines['top'].set_position(('data',0))\n",
+    "plt.gca().spines['right'].set_position(('data',0))\n",
+    "plt.grid(ls='--', zorder=0)\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.show()\n",
     "\n",
     "Audio(filtered_data, rate=fs)"
    ]
@@ -178,15 +181,26 @@
     "sig_noise_amp = 2 / t.size * np.abs(sig_noise_fft)\n",
     "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
     "\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(\n",
-    "            x = sig_noise_freq,\n",
-    "            y = sig_noise_amp,\n",
-    "            line =  dict(shape =  'spline' ),\n",
-    "            name = 'fft of original signal',\n",
-    "            showlegend=True\n",
-    "            ))\n",
-    "fig.show()"
+    "plt.figure(figsize=(12,7))\n",
+    "plt.plot(sig_noise_freq, sig_noise_amp, color='xkcd:lightish blue', label='Original signal')\n",
+    "plt.xlabel('Frequency')\n",
+    "plt.ylabel('Amplitude')\n",
+    "plt.title('Fourier Spectrum')\n",
+    "plt.gca().spines['top'].set_position(('data',0))\n",
+    "plt.gca().spines['right'].set_position(('data',0))\n",
+    "plt.grid(ls='--', zorder=0)\n",
+    "plt.legend(loc='upper right')\n",
+    "# plt.gca().set_xlim([-100,6000])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write('output.wav', Fs, data)"
    ]
   }
  ],
