simplified graph logic, general cleanup

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtrado de señales"
+    "# Filtrado de señales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Paquetes y gráficas"
    ]
   },
   {
@@ -23,10 +30,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   Funciones para graficar\n",
+    "\n",
+    "def graph(graph_type, *data, width = 12, height = 7):\n",
+    "    plt.figure(figsize=(width, height))\n",
+    "    if graph_type == 'waveform':\n",
+    "        plt.plot(data[0], color='xkcd:lightish blue', label='Original signal')\n",
+    "        if len(data) > 1: plt.plot(data[1], color='xkcd:watermelon', label='Filtered signal')\n",
+    "        plt.xlabel('Sample Index')\n",
+    "        plt.ylabel('Amplitude')\n",
+    "        plt.title('Waveform')\n",
+    "    elif graph_type == 'fft':\n",
+    "        plt.plot(data[0], data[1], color='xkcd:lightish blue', label='Original signal')\n",
+    "        if len(data) > 2: plt.plot(data[2], data[3], color='xkcd:watermelon', label='Filtered signal')\n",
+    "        plt.xlabel('Frequency')\n",
+    "        plt.ylabel('Amplitude')\n",
+    "        plt.title('Fourier Spectrum')\n",
+    "    plt.gca().spines['top'].set_position(('data',0))\n",
+    "    plt.gca().spines['right'].set_position(('data',0))\n",
+    "    plt.grid(ls='--', zorder=0)\n",
+    "    plt.legend(loc='upper right')\n",
+    "    # plt.gca().set_xlim([-100,6000])\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Señales"
+    "## Señales de entrada"
    ]
   },
   {
@@ -37,9 +74,9 @@
    "source": [
     "#   Señal de ejemplo\n",
     "##  Parámetros\n",
-    "T = 5           # Sample Period\n",
-    "fs = 300.0      # sample freq, Hz\n",
-    "n = int(T * fs) # total number of samples\n",
+    "T = 5           # Sample period (s)\n",
+    "fs = 300.0      # Sample freq (Hz)\n",
+    "n = int(T * fs) # Total number of samples\n",
     "t = np.linspace(0,T,n, endpoint=True)\n",
     "\n",
     "sig = np.sin(1.2*2*np.pi*t)\n",
@@ -54,41 +91,22 @@
    "outputs": [],
    "source": [
     "#   Audio 1\n",
-    "fs, data = read('test1.wav')\n",
-    "data = data[:,0]\n",
-    "print(\"Sampling Frequency is\", fs)\n",
+    "fs, data = read('test1.wav')    # Sample freq (Hz), data\n",
+    "data = data[:,0]                # Select only one channel\n",
     "\n",
     "##  Parámetros\n",
-    "n = data.shape[0]\n",
-    "T = n/fs\n",
+    "n = data.shape[0]               # Total samples\n",
+    "T = n/fs                        # Sample period (s)\n",
     "t = np.linspace(0,T,n, endpoint=True)\n",
     "\n",
     "Audio(data, rate=fs)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12,7))\n",
-    "plt.plot(data, color='xkcd:lightish blue', label='Original signal')\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Amplitude')\n",
-    "plt.title('Waveform')\n",
-    "plt.gca().spines['top'].set_position(('data',0))\n",
-    "plt.gca().spines['right'].set_position(('data',0))\n",
-    "plt.grid(ls='--', zorder=0)\n",
-    "plt.legend(loc='upper right')\n",
-    "plt.show()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Side quest: FFT para ver las frecuencias"
+    "### Visualización"
    ]
   },
   {
@@ -97,21 +115,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#   Waveform\n",
+    "graph('waveform', data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#   Fourier Spectrum\n",
     "sig_noise_fft = fftpack.fft(data)\n",
     "sig_noise_amp = 2 / t.size * np.abs(sig_noise_fft)\n",
     "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
     "\n",
-    "plt.figure(figsize=(12,7))\n",
-    "plt.plot(sig_noise_freq, sig_noise_amp, color='xkcd:lightish blue', label='Original signal')\n",
-    "plt.xlabel('Frequency')\n",
-    "plt.ylabel('Amplitude')\n",
-    "plt.title('Fourier Spectrum')\n",
-    "plt.gca().spines['top'].set_position(('data',0))\n",
-    "plt.gca().spines['right'].set_position(('data',0))\n",
-    "plt.grid(ls='--', zorder=0)\n",
-    "plt.legend(loc='upper right')\n",
-    "# plt.gca().set_xlim([-100,6000])\n",
-    "plt.show()"
+    "graph('fft', sig_noise_freq, sig_noise_amp)"
    ]
   },
   {
@@ -119,18 +138,6 @@
    "metadata": {},
    "source": [
     "### El filtro de Butterworth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#   Parámetros\n",
-    "cutoff = 3000   # desired cutoff frequency of the filter, Hz , slightly higher than actual 1.2 Hz\n",
-    "nyq = 0.5 * fs  # Nyquist Frequency\n",
-    "order = 2       # sin wave can be approx represented as quadratic"
    ]
   },
   {
@@ -153,20 +160,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#   Parámetros\n",
+    "cutoff = 2      # desired cutoff frequency of the filter, Hz\n",
+    "nyq = 0.5 * fs  # Nyquist Frequency\n",
+    "order = 2       # sin wave can be approx represented as quadratic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Filter the data, and plot both the original and filtered signals.\n",
     "filtered_data = butter_lowpass_filter(data, cutoff, fs, order)\n",
     "\n",
-    "plt.figure(figsize=(12,7))\n",
-    "plt.plot(data, color='xkcd:lightish blue', label='Original signal')\n",
-    "plt.plot(filtered_data, color='xkcd:watermelon', label='Filtered signal')\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Amplitude')\n",
-    "plt.title('Waveform')\n",
-    "plt.gca().spines['top'].set_position(('data',0))\n",
-    "plt.gca().spines['right'].set_position(('data',0))\n",
-    "plt.grid(ls='--', zorder=0)\n",
-    "plt.legend(loc='upper right')\n",
-    "plt.show()\n",
+    "graph('waveform', data, filtered_data)\n",
     "\n",
     "Audio(filtered_data, rate=fs)"
    ]
@@ -177,21 +186,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sig_noise_fft = fftpack.fft(filtered_data)\n",
-    "sig_noise_amp = 2 / t.size * np.abs(sig_noise_fft)\n",
-    "sig_noise_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
+    "sig_filter_fft = fftpack.fft(filtered_data)\n",
+    "sig_filter_amp = 2 / t.size * np.abs(sig_filter_fft)\n",
+    "sig_filter_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
     "\n",
-    "plt.figure(figsize=(12,7))\n",
-    "plt.plot(sig_noise_freq, sig_noise_amp, color='xkcd:lightish blue', label='Original signal')\n",
-    "plt.xlabel('Frequency')\n",
-    "plt.ylabel('Amplitude')\n",
-    "plt.title('Fourier Spectrum')\n",
-    "plt.gca().spines['top'].set_position(('data',0))\n",
-    "plt.gca().spines['right'].set_position(('data',0))\n",
-    "plt.grid(ls='--', zorder=0)\n",
-    "plt.legend(loc='upper right')\n",
-    "# plt.gca().set_xlim([-100,6000])\n",
-    "plt.show()"
+    "graph('fft', sig_noise_freq, sig_noise_amp, sig_filter_freq, sig_filter_amp)"
    ]
   },
   {
@@ -200,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write('output.wav', Fs, data)"
+    "write('output.wav', fs, filtered_data)"
    ]
   }
  ],
