fixed output encoding

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -36,7 +36,6 @@
    "outputs": [],
    "source": [
     "#   Funciones para graficar\n",
-    "\n",
     "def graph(graph_type, *data, width = 12, height = 7):\n",
     "    plt.figure(figsize=(width, height))\n",
     "    if graph_type == 'waveform':\n",
@@ -161,7 +160,9 @@
    "outputs": [],
    "source": [
     "#   Parámetros\n",
-    "cutoff = 2      # desired cutoff frequency of the filter, Hz\n",
+    "cutoff = 3000   # Desired cutoff frequency of the filter, Hz\n",
+    "                # Use the Fourier Spectrum to define desired cutoff frequency\n",
+    "                # Example uses 2Hz, Audio 1 around 3KHz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
     "order = 2       # sin wave can be approx represented as quadratic"
    ]
@@ -172,11 +173,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter the data, and plot both the original and filtered signals.\n",
+    "# Filter the data, plot both the original and filtered signals, filtered audio\n",
     "filtered_data = butter_lowpass_filter(data, cutoff, fs, order)\n",
     "\n",
     "graph('waveform', data, filtered_data)\n",
-    "\n",
     "Audio(filtered_data, rate=fs)"
    ]
   },
@@ -186,6 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#   Fourier spectrum of filtered audio\n",
     "sig_filter_fft = fftpack.fft(filtered_data)\n",
     "sig_filter_amp = 2 / t.size * np.abs(sig_filter_fft)\n",
     "sig_filter_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
@@ -199,7 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write('output.wav', fs, filtered_data)"
+    "#   Output filtered audio\n",
+    "write('output.wav', fs, filtered_data.astype(np.int16))"
    ]
   }
  ],
