two more samples added

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -89,9 +89,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#   Audio 1\n",
-    "fs, data = read('test1.wav')    # Sample freq (Hz), data\n",
-    "data = data[:,0]                # Select only one channel\n",
+    "fs, data = read('voice.wav')               # Sample freq (Hz), data\n",
+    "                                           # Currently \"voice.wav\", \"drums.wav\", \"noise.wav\"\n",
+    "if len(data.shape) > 1: data = data[:,0]   # Select only one channel\n",
     "\n",
     "##  Parámetros\n",
     "n = data.shape[0]               # Total samples\n",
@@ -160,9 +170,9 @@
    "outputs": [],
    "source": [
     "#   Parámetros\n",
-    "cutoff = 3000   # Desired cutoff frequency of the filter, Hz\n",
+    "cutoff = 5000   # Desired cutoff frequency of the filter, Hz\n",
     "                # Use the Fourier Spectrum to define desired cutoff frequency\n",
-    "                # Example uses 2Hz, Audio 1 around 3KHz\n",
+    "                # Example uses 2Hz, voice around 3KHz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
     "order = 2       # sin wave can be approx represented as quadratic"
    ]
