added transfer function render

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -22,11 +22,12 @@
    "source": [
     "#   Importar cosas que importan\n",
     "import numpy as np\n",
+    "from sympy import symbols, latex, sympify, Number\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.signal import butter, filtfilt\n",
+    "from scipy.signal import butter, filtfilt, TransferFunction\n",
     "from scipy.io.wavfile import read, write\n",
     "from scipy import fftpack\n",
-    "from IPython.display import Audio"
+    "from IPython.display import display, Math, Audio, Latex"
    ]
   },
   {
@@ -89,15 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#   Audio 1\n",
     "fs, data = read('voice.wav')               # Sample freq (Hz), data\n",
     "                                           # Currently \"voice.wav\", \"drums.wav\", \"noise.wav\"\n",
@@ -146,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El filtro de Butterworth"
+    "## Filtro de Butterworth"
    ]
   },
   {
@@ -160,7 +152,7 @@
     "    # Get the filter coefficients \n",
     "    b, a = butter(order, normal_cutoff, btype='low', analog=False)\n",
     "    y = filtfilt(b, a, data)\n",
-    "    return y"
+    "    return y, b, a"
    ]
   },
   {
@@ -174,7 +166,17 @@
     "                # Use the Fourier Spectrum to define desired cutoff frequency\n",
     "                # Example uses 2Hz, voice around 3KHz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
-    "order = 2       # sin wave can be approx represented as quadratic"
+    "order = 2       # sin wave can be approx represented as quadratic\n",
+    "\n",
+    "#   Filter the data\n",
+    "filtered_data, b, a = butter_lowpass_filter(data, cutoff, fs, order)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualización y exportación"
    ]
   },
   {
@@ -183,9 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter the data, plot both the original and filtered signals, filtered audio\n",
-    "filtered_data = butter_lowpass_filter(data, cutoff, fs, order)\n",
-    "\n",
+    "#   Plot both the original and filtered signals, filtered audio\n",
     "graph('waveform', data, filtered_data)\n",
     "Audio(filtered_data, rate=fs)"
    ]
@@ -212,6 +212,34 @@
    "source": [
     "#   Output filtered audio\n",
     "write('output.wav', fs, filtered_data.astype(np.int16))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función de transferencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf = TransferFunction(b, a)\n",
+    "\n",
+    "#   Pretty print the transfer function in LaTeX\n",
+    "def pretty_print_tf_latex(tf):\n",
+    "    s = symbols('s')\n",
+    "    num = sum(coeff * s**power for power, coeff in enumerate(tf.num[::-1]))\n",
+    "    den = sum(coeff * s**power for power, coeff in enumerate(tf.den[::-1]))\n",
+    "    latex_str = (sympify(num / den))\n",
+    "    formatted_str = latex_str.xreplace({n : round(n, 3) for n in latex_str.atoms(Number)})\n",
+    "    return latex(formatted_str)\n",
+    "\n",
+    "# Use the function\n",
+    "display(Math(rf'H(s) = {pretty_print_tf_latex(tf)}'))"
    ]
   }
  ],
