--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "from sympy import symbols, latex, sympify, Number\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.signal import butter, filtfilt, TransferFunction\n",
+    "from scipy.signal import butter, filtfilt, lfilter, freqz, TransferFunction\n",
     "from scipy.io.wavfile import read, write\n",
     "from scipy import fftpack\n",
     "from IPython.display import display, Math, Audio, Latex"
@@ -49,10 +49,12 @@
     "        plt.plot(data[0], data[1], color='xkcd:lightish blue', label='Original signal')\n",
     "        if len(data) > 2: plt.plot(data[2], data[3], color='xkcd:watermelon', label='Filtered signal')\n",
     "        plt.xlabel('Frequency')\n",
+    "        # plt.xscale('log')\n",
     "        plt.ylabel('Amplitude')\n",
+    "        # plt.yscale('log')\n",
     "        plt.title('Fourier Spectrum')\n",
-    "    plt.gca().spines['top'].set_position(('data',0))\n",
-    "    plt.gca().spines['right'].set_position(('data',0))\n",
+    "    # plt.gca().spines['top'].set_position(('data',0))\n",
+    "    # plt.gca().spines['right'].set_position(('data',0))\n",
     "    plt.grid(ls='--', zorder=0)\n",
     "    plt.legend(loc='upper right')\n",
     "    # plt.gca().set_xlim([-100,6000])\n",
@@ -91,7 +93,7 @@
    "outputs": [],
    "source": [
     "#   Audio 1\n",
-    "fs, data = read('voice.wav')               # Sample freq (Hz), data\n",
+    "fs, data = read('1Hz_44000Hz_-3dBFS_30s.wav')               # Sample freq (Hz), data\n",
     "                                           # Currently \"voice.wav\", \"drums.wav\", \"noise.wav\"\n",
     "if len(data.shape) > 1: data = data[:,0]   # Select only one channel\n",
     "\n",
@@ -142,12 +144,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cálculo y demás"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def butter_lowpass_filter(data, cutoff, fs, order):\n",
+    "def butter_lowpass_filter(data, cutoff, nyq, order):\n",
     "    normal_cutoff = cutoff / nyq\n",
     "    # Get the filter coefficients \n",
     "    b, a = butter(order, normal_cutoff, btype='low', analog=False)\n",
@@ -162,14 +171,14 @@
    "outputs": [],
    "source": [
     "#   Parámetros\n",
-    "cutoff = 5000   # Desired cutoff frequency of the filter, Hz\n",
+    "cutoff = 20000  # Desired cutoff frequency of the filter, Hz\n",
     "                # Use the Fourier Spectrum to define desired cutoff frequency\n",
     "                # Example uses 2Hz, voice around 3KHz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
-    "order = 2       # sin wave can be approx represented as quadratic\n",
+    "order = 10\n",
     "\n",
     "#   Filter the data\n",
-    "filtered_data, b, a = butter_lowpass_filter(data, cutoff, fs, order)"
+    "filtered_data, b, a = butter_lowpass_filter(data, cutoff, nyq, order)"
    ]
   },
   {
@@ -186,8 +195,7 @@
    "outputs": [],
    "source": [
     "#   Plot both the original and filtered signals, filtered audio\n",
-    "graph('waveform', data, filtered_data)\n",
-    "Audio(filtered_data, rate=fs)"
+    "graph('waveform', data, filtered_data)"
    ]
   },
   {
@@ -211,7 +219,39 @@
    "outputs": [],
    "source": [
     "#   Output filtered audio\n",
+    "Audio(filtered_data, rate=fs)\n",
     "write('output.wav', fs, filtered_data.astype(np.int16))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diagramas de Bode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,7))\n",
+    "for i in range(1,11):\n",
+    "    _, b, a = butter_lowpass_filter(data, cutoff, nyq, i)\n",
+    "    w, h = freqz(b, a, fs = fs)\n",
+    "\n",
+    "    plt.plot(w, np.abs(h), 'xkcd:lightish blue')\n",
+    "    plt.plot(cutoff, 0.5*np.sqrt(2), 'ko')\n",
+    "    plt.axvline(cutoff, color='k')\n",
+    "    plt.xlim(0, 0.5*fs)\n",
+    "    \n",
+    "plt.title(\"Lowpass Filter Frequency Response\")\n",
+    "plt.xlabel('Frequency [Hz]')\n",
+    "plt.gca().spines['top'].set_position(('data',0))\n",
+    "plt.gca().spines['right'].set_position(('data',0))\n",
+    "plt.grid(ls='--', zorder=0)\n",
+    "plt.show()"
    ]
   },
   {
