added colour support for bode diagrams

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -236,12 +236,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "colors = ['xkcd:violet', 'xkcd:blue', 'xkcd:green', 'xkcd:dark yellow', 'xkcd:orange', 'xkcd:red', 'xkcd:pink']  # Add more xkcd colors if needed\n",
+    "\n",
     "plt.figure(figsize=(12,7))\n",
     "for i in range(1,11):\n",
     "    _, b, a = butter_lowpass_filter(data, cutoff, nyq, i)\n",
     "    w, h = freqz(b, a, fs = fs)\n",
     "\n",
-    "    plt.plot(w, np.abs(h), 'xkcd:lightish blue')\n",
+    "    plt.plot(w, np.abs(h), color=colors[i%len(colors)-1], label=f'Order {i}')\n",
     "    plt.plot(cutoff, 0.5*np.sqrt(2), 'ko')\n",
     "    plt.axvline(cutoff, color='k')\n",
     "    plt.xlim(0, 0.5*fs)\n",
@@ -251,6 +253,7 @@
     "plt.gca().spines['top'].set_position(('data',0))\n",
     "plt.gca().spines['right'].set_position(('data',0))\n",
     "plt.grid(ls='--', zorder=0)\n",
+    "plt.legend(loc='upper right')\n",
     "plt.show()"
    ]
   },
@@ -259,6 +262,34 @@
    "metadata": {},
    "source": [
     "### Función de transferencia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función de transferencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf = TransferFunction(b, a)\n",
+    "\n",
+    "#   Pretty print the transfer function in LaTeX\n",
+    "def pretty_print_tf_latex(tf):\n",
+    "    s = symbols('s')\n",
+    "    num = sum(coeff * s**power for power, coeff in enumerate(tf.num[::-1]))\n",
+    "    den = sum(coeff * s**power for power, coeff in enumerate(tf.den[::-1]))\n",
+    "    latex_str = (sympify(num / den))\n",
+    "    formatted_str = latex_str.xreplace({n : round(n, 3) for n in latex_str.atoms(Number)})\n",
+    "    return latex(formatted_str)\n",
+    "\n",
+    "# Use the function\n",
+    "display(Math(rf'H(s) = {pretty_print_tf_latex(tf)}'))"
    ]
   },
   {
