--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -175,7 +175,7 @@
     "                # Use the Fourier Spectrum to define desired cutoff frequency\n",
     "                # Example uses 2Hz, voice around 3KHz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
-    "order = 10\n",
+    "order = 3\n",
     "\n",
     "#   Filter the data\n",
     "filtered_data, b, a = butter_lowpass_filter(data, cutoff, nyq, order)"
@@ -236,24 +236,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors = ['xkcd:violet', 'xkcd:blue', 'xkcd:green', 'xkcd:dark yellow', 'xkcd:orange', 'xkcd:red', 'xkcd:pink']  # Add more xkcd colors if needed\n",
+    "colors = ['xkcd:violet', 'xkcd:blue', 'xkcd:neon blue', 'xkcd:green', 'xkcd:yellowish green', 'xkcd:dark yellow', 'xkcd:orange', 'xkcd:red', 'xkcd:pink']  # Add more xkcd colors if needed\n",
     "\n",
     "plt.figure(figsize=(12,7))\n",
     "for i in range(1,11):\n",
-    "    _, b, a = butter_lowpass_filter(data, cutoff, nyq, i)\n",
-    "    w, h = freqz(b, a, fs = fs)\n",
+    "    _, bb, aa = butter_lowpass_filter(data, cutoff, nyq, i)\n",
+    "    w, h = freqz(bb, aa, fs = fs)\n",
     "\n",
-    "    plt.plot(w, np.abs(h), color=colors[i%len(colors)-1], label=f'Order {i}')\n",
+    "    plt.plot(w, np.abs(h), color=colors[i%len(colors)-1], label=f'Orden {i}')\n",
     "    plt.plot(cutoff, 0.5*np.sqrt(2), 'ko')\n",
     "    plt.axvline(cutoff, color='k')\n",
     "    plt.xlim(0, 0.5*fs)\n",
     "    \n",
-    "plt.title(\"Lowpass Filter Frequency Response\")\n",
-    "plt.xlabel('Frequency [Hz]')\n",
+    "plt.title(\"Diagrama de Bode - Filtro de paso bajo\")\n",
+    "plt.xlabel('Frecuencia [Hz]')\n",
+    "plt.ylabel('Magnitud [dB]')\n",
     "plt.gca().spines['top'].set_position(('data',0))\n",
     "plt.gca().spines['right'].set_position(('data',0))\n",
     "plt.grid(ls='--', zorder=0)\n",
     "plt.legend(loc='upper right')\n",
+    "plt.savefig(\"bode.png\", dpi = 300)\n",
     "plt.show()"
    ]
   },
@@ -262,34 +264,6 @@
    "metadata": {},
    "source": [
     "### Función de transferencia"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Función de transferencia"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf = TransferFunction(b, a)\n",
-    "\n",
-    "#   Pretty print the transfer function in LaTeX\n",
-    "def pretty_print_tf_latex(tf):\n",
-    "    s = symbols('s')\n",
-    "    num = sum(coeff * s**power for power, coeff in enumerate(tf.num[::-1]))\n",
-    "    den = sum(coeff * s**power for power, coeff in enumerate(tf.den[::-1]))\n",
-    "    latex_str = (sympify(num / den))\n",
-    "    formatted_str = latex_str.xreplace({n : round(n, 3) for n in latex_str.atoms(Number)})\n",
-    "    return latex(formatted_str)\n",
-    "\n",
-    "# Use the function\n",
-    "display(Math(rf'H(s) = {pretty_print_tf_latex(tf)}'))"
    ]
   },
   {
