added test audios, graph language

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -37,27 +37,25 @@
    "outputs": [],
    "source": [
     "#   Funciones para graficar\n",
-    "def graph(graph_type, *data, width = 12, height = 7):\n",
+    "def graph(graph_type, *data, save = None, width = 12, height = 7):\n",
     "    plt.figure(figsize=(width, height))\n",
     "    if graph_type == 'waveform':\n",
-    "        plt.plot(data[0], color='xkcd:lightish blue', label='Original signal')\n",
-    "        if len(data) > 1: plt.plot(data[1], color='xkcd:watermelon', label='Filtered signal')\n",
-    "        plt.xlabel('Sample Index')\n",
-    "        plt.ylabel('Amplitude')\n",
-    "        plt.title('Waveform')\n",
+    "        plt.plot(data[0], color='xkcd:lightish blue', label='Señal original')\n",
+    "        if len(data) > 1: plt.plot(data[1], color='xkcd:watermelon', label='Señal filtrada')\n",
+    "        plt.xlabel('Índice de muestreo')\n",
+    "        plt.ylabel('Amplitud [PCM]')\n",
+    "        plt.title('Onda')\n",
     "    elif graph_type == 'fft':\n",
-    "        plt.plot(data[0], data[1], color='xkcd:lightish blue', label='Original signal')\n",
-    "        if len(data) > 2: plt.plot(data[2], data[3], color='xkcd:watermelon', label='Filtered signal')\n",
-    "        plt.xlabel('Frequency')\n",
-    "        # plt.xscale('log')\n",
-    "        plt.ylabel('Amplitude')\n",
-    "        # plt.yscale('log')\n",
-    "        plt.title('Fourier Spectrum')\n",
-    "    # plt.gca().spines['top'].set_position(('data',0))\n",
-    "    # plt.gca().spines['right'].set_position(('data',0))\n",
+    "        plt.plot(data[0], data[1], color='xkcd:lightish blue', label='Señal original')\n",
+    "        if len(data) > 2: plt.plot(data[2], data[3], color='xkcd:watermelon', label='Señal filtrada')\n",
+    "        plt.xlabel('Frecuencia [Hz]')\n",
+    "        plt.ylabel('Amplitud [PCM]')\n",
+    "        plt.title('Espectro de Fourier')\n",
+    "    plt.gca().spines['top'].set_position(('data',0))\n",
+    "    plt.gca().spines['right'].set_position(('data',0))\n",
     "    plt.grid(ls='--', zorder=0)\n",
     "    plt.legend(loc='upper right')\n",
-    "    # plt.gca().set_xlim([-100,6000])\n",
+    "    if type(save) is not type(None):  plt.savefig(save, dpi=200, bbox_inches='tight')\n",
     "    plt.show()"
    ]
   },
@@ -92,10 +90,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#   Audio 1\n",
-    "fs, data = read('1Hz_44000Hz_-3dBFS_30s.wav')               # Sample freq (Hz), data\n",
-    "                                           # Currently \"voice.wav\", \"drums.wav\", \"noise.wav\"\n",
-    "if len(data.shape) > 1: data = data[:,0]   # Select only one channel\n",
+    "#   Audios\n",
+    "fs, data = read('voice2.wav')   # Sample freq (Hz), data\n",
+    "                                                # Currently \"voice.wav\", \"1Hz_44000Hz_-3dBFS_30s.wav\"\n",
+    "if len(data.shape) > 1: data = data[:,0]        # Select only one channel\n",
     "\n",
     "##  Parámetros\n",
     "n = data.shape[0]               # Total samples\n",
@@ -171,11 +169,11 @@
    "outputs": [],
    "source": [
     "#   Parámetros\n",
-    "cutoff = 20000  # Desired cutoff frequency of the filter, Hz\n",
+    "cutoff = 5000  # Desired cutoff frequency of the filter, Hz\n",
     "                # Use the Fourier Spectrum to define desired cutoff frequency\n",
     "                # Example uses 2Hz, voice around 3KHz\n",
     "nyq = 0.5 * fs  # Nyquist Frequency\n",
-    "order = 3\n",
+    "order = 10\n",
     "\n",
     "#   Filter the data\n",
     "filtered_data, b, a = butter_lowpass_filter(data, cutoff, nyq, order)"
@@ -195,7 +193,7 @@
    "outputs": [],
    "source": [
     "#   Plot both the original and filtered signals, filtered audio\n",
-    "graph('waveform', data, filtered_data)"
+    "graph('waveform', data, filtered_data, save = \"wave2.png\")"
    ]
   },
   {
@@ -209,7 +207,7 @@
     "sig_filter_amp = 2 / t.size * np.abs(sig_filter_fft)\n",
     "sig_filter_freq = np.abs(fftpack.fftfreq(t.size, T/n))\n",
     "\n",
-    "graph('fft', sig_noise_freq, sig_noise_amp, sig_filter_freq, sig_filter_amp)"
+    "graph('fft', sig_noise_freq, sig_noise_amp, sig_filter_freq, sig_filter_amp, save = \"fs2.png\")"
    ]
   },
   {
@@ -220,7 +218,7 @@
    "source": [
     "#   Output filtered audio\n",
     "Audio(filtered_data, rate=fs)\n",
-    "write('output.wav', fs, filtered_data.astype(np.int16))"
+    "write('output2.wav', fs, filtered_data.astype(np.int16))"
    ]
   },
   {
@@ -255,7 +253,7 @@
     "plt.gca().spines['right'].set_position(('data',0))\n",
     "plt.grid(ls='--', zorder=0)\n",
     "plt.legend(loc='upper right')\n",
-    "plt.savefig(\"bode.png\", dpi = 300)\n",
+    "plt.savefig(\"bode.png\", dpi = 300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
