cleanup for pdf export

--- a/especiales2/filter.ipynb
+++ b/especiales2/filter.ipynb
@@ -24,10 +24,10 @@
     "import numpy as np\n",
     "from sympy import symbols, latex, sympify, Number\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.signal import butter, filtfilt, lfilter, freqz, TransferFunction\n",
+    "from scipy.signal import butter, filtfilt, freqz, TransferFunction\n",
     "from scipy.io.wavfile import read, write\n",
     "from scipy import fftpack\n",
-    "from IPython.display import display, Math, Audio, Latex"
+    "from IPython.display import display, Math, Audio"
    ]
   },
   {
