--- a/termo2/indiv1/termox.ipynb
+++ b/termo2/indiv1/termox.ipynb
@@ -83,7 +83,7 @@
     "plt.gca().spines['right'].set_visible(False)\n",
     "plt.grid(axis='both', linestyle=\"--\")\n",
     "plt.legend()\n",
-    "plt.savefig('RT.png', dpi=300)\n",
+    "# plt.savefig('Original.png', dpi=300)\n",
     "plt.show()"
    ]
   },
