completed bloch sphere gates

--- a/termo2/exp2/equivalentes.ipynb
+++ b/termo2/exp2/equivalentes.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vj/p_wfrn2s5dd6k2_7ngzxs6j40000gn/T/ipykernel_7352/1838855492.py:5: RuntimeWarning: invalid value encountered in log\n",
+      "/var/folders/vj/p_wfrn2s5dd6k2_7ngzxs6j40000gn/T/ipykernel_2644/1620167364.py:5: RuntimeWarning: invalid value encountered in log\n",
       "  return 1 / ((1/t0) + (1/b) * (np.log(r) - np.log(r0))) - 273.15\n"
      ]
     },
@@ -96,7 +96,7 @@
     "plt.gca().spines['right'].set_visible(False)\n",
     "plt.grid(axis='both', linestyle=\"--\")\n",
     "plt.legend()\n",
-    "#plt.savefig('mecworkheat.png', dpi=300)\n",
+    "plt.savefig('Termistor.png', dpi=300)\n",
     "plt.show()\n",
     "\n",
     "def termistor(r):\n",
